tests/fixtures/fail/region_duplicate.sc
let read(R: region, R: region)(value: i32): i32 = { value }
let main(): i32 = { 42 }
